# recommender-service

./: Procfile  README.md  main.py  pyproject.toml  requirements.txt
models/: movies_df.pkl  tfidf.pkl  tfidf_matrix.pkl
recommender_models/: recommender.py
static/: app.js  index.html  styles.css
