[project]
name = "movie-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "gunicorn>=25.1.0",
    "joblib>=1.5.3",
    "pandas>=3.0.1",
    "rapidfuzz>=3.14.3",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.34.0",
]
